src/tess/tl/test/fail/test_fail_weak_int_cross_family.tl
#module main
take_cint(x: CInt) { x              }
main     ()        { take_cint(42u) }
